add_executable(memMove 
    ./memMove.cpp)
add_executable(binaryTree 
    ./binaryTree.cpp)
add_executable(balancedBrackets 
    ./balancedBrackets.cpp) 
add_executable(sumOfBits 
    ./sumOfBits.cpp) 
add_executable(linkedList 
    ./linkedList.cpp) 
add_executable(minHeap 
    ./minHeap.cpp)     
add_executable(functors 
    ./functors.cpp)      
add_executable(longestSequence 
    ./longestSequence.cpp)       
add_executable(longestContinuousSequence 
    ./longestContinuousSequence.cpp)      
add_executable(longestValidBrackets 
    ./longestValidBrackets.cpp)      
add_executable(reverseArray 
    ./reverseArray.cpp)   
add_executable(patternSearch
    ./patternSearch.cpp)   
add_executable(mergeSorted
    ./mergeSorted.cpp)         
add_executable(kthLargest
    ./kthLargest.cpp)  
add_executable(mutatablePriorityQueue
    ./mutatablePriorityQueue.cpp)   
add_executable(findMissingNumber
    ./findMissingNumber.cpp)  
add_executable(reverseBits
    ./reverseBits.cpp)             